force-app/main/default/objects/ffct__Bundle__c/ffct__Bundle__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffct__bundleonlinehelp</customHelpPage>
    <description>The header information for each bundle.</description>
    <label>Bundle</label>
    <nameField>
        <label>Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>