force-app/main/default/objects/ffct__Bundle__c/fields/ffct__Author__c.field-meta.xml
<CustomField>
    <fullName>ffct__Author__c</fullName>
    <defaultValue>IF(ISBLANK( $User.FirstName ), $User.LastName , $User.FirstName+&quot; &quot;+ $User.LastName )</defaultValue>
    <label>Author</label>
    <length>100</length>
    <type>Text</type>
</CustomField>