force-app/main/default/objects/ffct__Bundle__c/fields/ffct__Export_Date__c.field-meta.xml
<CustomField>
    <fullName>ffct__Export_Date__c</fullName>
    <label>Export Date</label>
    <type>DateTime</type>
</CustomField>