force-app/main/default/objects/ffct__Bundle__c/fields/ffct__MultiCurrency_org_Bundle__c.field-meta.xml
<CustomField>
    <fullName>ffct__MultiCurrency_org_Bundle__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When selected, the bundle created will work on multiple currency organizations. When not selected, the bundle will work on both single currency and multiple currency organizations.</inlineHelpText>
    <label>Is a Multiple Currency Org Bundle</label>
    <type>Checkbox</type>
</CustomField>