force-app/main/default/objects/ffct__Bundle__c/fields/ffct__Packages_Installed__c.field-meta.xml
<CustomField>
    <fullName>ffct__Packages_Installed__c</fullName>
    <label>Packages Installed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>