force-app/main/default/objects/ffct__Bundle__c/fields/ffct__Source_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>ffct__Source_Org_Id__c</fullName>
    <label>Source Org Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>