force-app/main/default/objects/ffct__Bundle__c/fields/ffct__Tags__c.field-meta.xml
<CustomField>
    <fullName>ffct__Tags__c</fullName>
    <description>Field to maintain tags this bundle is related to.</description>
    <inlineHelpText>Please enter | separated tags to the bundle.</inlineHelpText>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>